# bridge-contracts

./: .gitignore  CODEOWNERS  README  README.md  run_all_tests.sh
.github/workflows/: run_contract_tests.yaml  run_lint_check.yaml
contracts/: Cargo.toml
contracts/admin-controlled/: Cargo.toml
contracts/admin-controlled/src/: lib.rs  macros.rs
contracts/admin_controlled/: Cargo.toml
contracts/admin_controlled/src/: lib.rs  macros.rs
contracts/bridge/: Cargo.toml
contracts/bridge/src/: lib.rs
contracts/bridge_token/src/: lib.rs
contracts/bridge_token_deployer/: Cargo.toml  bridge_token.wasm  build.sh  build_ft.sh  build_nft.sh  deploy.sh  test_ft.sh  test_nft.sh
contracts/bridge_token_deployer/src/: lib.rs
contracts/bridge_token_deployer/tests/: name_test.rs
contracts/connector_base/: Cargo.toml
contracts/connector_base/src/: lib.rs  macros.rs
contracts/connector_permissions/: Cargo.toml  build.sh
contracts/connector_permissions/src/: lib.rs
contracts/connector_permissions/tests/: connector_permissions_tests.rs
contracts/ft_bridge_token/: Cargo.toml  build.sh  deploy.sh
contracts/ft_bridge_token/src/: lib.rs
contracts/ft_connector/: .gitignore  Cargo.toml  build.sh  deploy.sh  deploy_calimero.sh  set_locker_dest.sh  set_locker_source.sh  test.sh
contracts/ft_connector/src/: lib.rs
contracts/ft_connector/tests/: burn_proof.json  destination_connector_test.rs  mint_proof.json  source_connector_test.rs
contracts/ft_connector/tests/destination_test_assets/: lock_proof.json  lock_proof2.json  lock_proof3.json
contracts/ft_connector/tests/source_test_assets/: burn_proof.json  deploy_proof.json  fungible_token.wasm
contracts/ft_connector_destination/: Cargo.toml  build.sh  deploy.sh  deploy_calimero.sh  set_locker.sh  test.sh  tx_example.json
contracts/ft_connector_destination/src/: lib.rs
contracts/ft_connector_destination/tests/: connector_test.rs  mint_proof.json  mint_transaction.json
contracts/ft_connector_source/: Cargo.toml  build.sh  deploy.sh  set_locker.sh
contracts/ft_connector_source/src/: lib.rs
contracts/ft_connector_source/tests/: connector_test.rs
contracts/light_client/: Cargo.toml  build.sh  build_reset.sh  deploy.sh  deploy_calimero.sh
contracts/light_client/src/: errors.rs  lib.rs  signature.rs  utils.rs
contracts/light_client/tests/: 244.json  304.json  308.json  block_105190359.json  block_105233559.json  block_105276759.json  block_105319959.json  block_105363159.json  block_105406359.json  block_105449559.json  block_105492759.json  block_105535959.json  block_105579159.json  block_105622359.json  block_105665559.json  block_105708759.json  block_105738334.json  block_105738335.json  block_105739252.json  block_105739253.json  block_115780580.json  block_115799227.json  block_93439858.json  block_93447397.json  block_9605.json  block_9610.json  client_test.rs  local_block_1.json  local_block_2.json  local_validators.json  network_block1.json  network_block2.json  network_block3.json  network_block4.json  network_validators.json  signature_test.rs  validators.json
contracts/mock_light_client/: Cargo.toml
contracts/mock_light_client/src/: lib.rs
contracts/mock_prover/: Cargo.toml  build.sh
contracts/mock_prover/src/: lib.rs
contracts/nft_bridge_token/: build.sh  deploy.sh
contracts/nft_bridge_token/src/: lib.rs
contracts/nft_connector/: .gitignore  Cargo.toml  build.sh  deploy.sh  deploy_calimero.sh  set_locker_dest.sh  set_locker_source.sh  test.sh
contracts/nft_connector/src/: lib.rs
contracts/nft_connector/tests/: destination_connector_test.rs  source_connector_test.rs
contracts/nft_connector/tests/destination_test_assets/: lock_proof.json
contracts/nft_connector/tests/source_test_assets/: deploy_proof.json
contracts/nft_connector_destination/: Cargo.toml  build.sh  deploy_calimero.sh  set_locker_testnet.sh
contracts/nft_connector_destination/src/: lib.rs
contracts/nft_connector_destination/tests/: destination_connector_test.rs
contracts/nft_connector_source/: Cargo.toml  build.sh  deploy.sh  set_locker_testnet.sh
contracts/nft_connector_source/src/: lib.rs
contracts/nft_connector_source/tests/: burn_proof.json  non_fungible_token.wasm  source_connector_test.rs
contracts/prover/: Cargo.toml  build.sh  deploy.sh  deploy_calimero.sh
contracts/prover/src/: lib.rs
contracts/prover/tests/: incorrect_proof1.json  incorrect_proof2.json  proof10.json  proof2.json  proof3.json  proof4.json  proof5.json  proof6.json  proof7.json  proof8.json  proof9.json  prover_test.rs
contracts/test_utils/: Cargo.toml
contracts/test_utils/src/: lib.rs
contracts/types/: Cargo.toml
contracts/types/src/: lib.rs  signature.rs
contracts/types/tests/: signature_test.rs
contracts/utils/: Cargo.toml
contracts/utils/src/: lib.rs
contracts/wasm/: connector_permissions.wasm  ft_bridge_token_deployer.wasm  ft_connector.wasm  ft_connector_destination.wasm  ft_connector_source.wasm  light_client.wasm  light_client_reset.wasm  nft_bridge_token_deployer.wasm  nft_connector.wasm  nft_connector_destination.wasm  nft_connector_source.wasm  prover.wasm  xsc_connector.wasm
contracts/xsc_connector/: Cargo.toml  build.sh  deploy.sh  deploy_calimero.sh
contracts/xsc_connector/src/: lib.rs
contracts/xsc_connector/tests/: cross_shard_call_connector_test.rs
contracts/xsc_connector/tests/test_assets/: cross_call_execute_proof.json  cross_call_receive_response_proof.json
contracts/xsc_connector/tests/test_assets/tictactoe/: tic_tac_toe.rs  tic_tac_toe.wasm
utils/: balance.sh  create_account.sh  delete_account.sh
