[workspace]
members = [
  "admin_controlled",
  "bridge_token_deployer",
  "connector_base",
  "connector_permissions",
  "ft_bridge_token",
  "ft_connector",
  "light_client",
  "mock_light_client",
  "mock_prover",
  "nft_connector",
  "prover",
  "test_utils",
  "types",
  "utils",
  "xsc_connector",
]
exclude = [
  "nft_bridge_token",
]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true