[package]
name = "calimero-relayer-prover"
version = "0.1.0"
authors = ["Calimero Limited <info@calimero.network>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wee_alloc = { version = "0.4.5", default-features = false, features = [] }
admin-controlled =  { path = "../admin-controlled" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
near-crypto = { git = "https://github.com/nearprotocol/nearcore.git" }
near-primitives = { git = "https://github.com/nearprotocol/nearcore.git", features = ["protocol_feature_chunk_only_producers"] }
near-sdk = { git = "https://github.com/near/near-sdk-rs", rev = "613adcab6322e4f830efb4d5bde2a810ae642158" }
borsh = "0.8.1"
rlp = "0.4.2"
hex = "0.4.2"

[dev-dependencies]
hex = "0.4.2"
indicatif = "0.14"
lazy_static = "*"
node-runtime = { git = "https://github.com/nearprotocol/nearcore.git" }
