[package]
name = "bridge_token_deployer"
version = "0.1.0"
authors = ["Calimero Limited <info@calimero.network>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0"
utils = { path = "../utils" }
substring = "1.4"

[dev-dependencies]
workspaces = "0.4.1"
tokio = { version = "1.18.1", features = ["full"] }
near-jsonrpc-client = "= 0.4.0-beta.0"
near-units = "0.2.0"
test_utils = { path = "../test_utils" }
serde_json = "1.0.85"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
