[package]
name = "connector_permissions"
version = "0.1.0"
authors = ["Calimero <info@calimero.network>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
utils = { path = "../utils" }
types = { path = "../types" }
near-sdk = "= 4.0.0"
regex = "1"

[dev-dependencies]
workspaces = "0.4.1"
tokio = { version = "1.18.1", features = ["full"] }
near-jsonrpc-client = "= 0.4.0-beta.0"
near-units = "0.2.0"
serde_json = "1.0.85"
