[package]
name = "bridge_token"
version = "0.1.0"
authors = ["Calimero Limited <info@calimero.network>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
admin_controlled = { path = "../admin_controlled" }
utils = { path = "../utils" }
types = { path = "../types" }
near-sdk = "4.0.0"
near-contract-standards = "4.0.0"
