[package]
name = "light_client"
version = "0.1.0"
authors = ["Calimero <info@calimero.network>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
admin_controlled = { path = "../admin_controlled" }
utils = { path = "../utils" }
types = { path = "../types" }
near-sdk = "4.0.0"

[dev-dependencies]
test_utils = { path = "../test_utils" }
ed25519-dalek = "1"
rand_core = "0.5"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
