[package]
name = "light_client"
version = "0.1.0"
authors = ["Calimero <info@calimero.network>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
admin_controlled = { path = "../admin_controlled" }
utils = { path = "../utils" }
types = { path = "../types" }
near-sdk = "4.0.0"

[dev-dependencies]
test_utils = { path = "../test_utils" }
ed25519-dalek = "2"
rand_core = "0.5"
