[package]
name = "prover"
version = "0.1.0"
authors = ["Calimero <info@calimero.network>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
admin_controlled = { path = "../admin_controlled" }
utils = { path = "../utils" }
types = { path = "../types" }
near-sdk = "4.0.0"
ed25519-dalek = "1"
getrandom = { version = "0.2", features = ["custom"] }
base64 = "0.13"
libsecp256k1 = "0.7"
primitive-types = "0.10"
thiserror = "1"

[dev-dependencies]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
