[package]
name = "types"
version = "0.1.0"
authors = ["Calimero Limited <info@calimero.network>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
utils = { path = "../utils" }
near-sdk = "4.0.0"
ed25519-dalek = "1"
getrandom = { version = "0.2", features = ["custom"] }
libsecp256k1 = "0.7"
thiserror = "1"
primitive-types = "0.10"
derive_more = "0.99.9"

[dev-dependencies]
rand_08 = { package = "rand", version = "0.8" }
rand_core_06 = { package = "rand_core", version = "0.6" }
rand_07 = { package = "rand", version = "0.7" }
rand_core_05 = { package = "rand_core", version = "0.5" }